hashicorp-vault/kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-go-app-service
spec:
  type: ClusterIP
  selector:
    app: my-go-app
  ports:
  - port: 3000
    targetPort: 3000
