hashicorp-vault/kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-go-app-ingress
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: my-go-app.kiansajjadi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-go-app-service
            port:
              number: 3000
